--- a/DATN/src/main/resources/templates/app/layout/cart.html
+++ b/DATN/src/main/resources/templates/app/layout/cart.html
@@ -38,7 +38,7 @@
                 <div class="flex w-full flex-col gap-y-5 text-black text-sm font-light">
                     <div class="flex w-full border border-orange-300 rounded-lg p-5 gap-x-2">
                         <div class="w-[50%] sm:w-[40%] lg:w-[20%]">
-                            <img class="" src="../../../static/assets/images/products/s1.jpg" alt="">
+                            <img class="" src="/assets/images/products/s1.jpg" alt="">
                         </div>
                         
                         <div class="grid grid-cols-2 w-full justify-between text-xs">
