--- a/DATN/src/main/resources/templates/components/_banner.html
+++ b/DATN/src/main/resources/templates/components/_banner.html
@@ -2,10 +2,10 @@
 <section class="w-[80%] mx-auto mt-5">
   <div class="diff aspect-[16/9] rounded-box">
     <div class="diff-item-1">
-      <img alt="daisy" src="/assets/images/sgx.png">
+      <img alt="daisy" class="" src="/assets/images/Sofa_Banner.jpg">
     </div>
     <div class="diff-item-2">
-      <img alt="daisy" src="/assets/images/sgx4-4273.jpeg">
+      <img alt="daisy" class="" src="/assets/images/sgx4-4273.jpeg">
     </div>
     <div class="diff-resizer" style="width: 1142px;"></div>
 
