--- a/DATN/src/main/resources/templates/components/index.html
+++ b/DATN/src/main/resources/templates/components/index.html
@@ -48,294 +48,19 @@
     <div th:replace="./components/_category.html"></div>
 
 
+    <!--  -->
+    <div class="" th:replace="./components/_ourProduct.html"></div>
 
-    <section class="w-[80%] pt-8  mx-auto px-4">
-        <div>
-            <p class="text-center font-bold text-4xl">OUR PRODUCTS</p>
-        </div>
-        <div class="flex  justify-center my-5 p-5 gap-x-5 text-lg font-light">
-            <button
-                class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2  ">Popular</button>
-            <button
-                class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2 ">Best
-                Sellers</button>
-            <button
-                class=" duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2 ">Featured</button>
-            <button
-                class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2  ">New
-                Products</button>
-        </div>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  justify-items-center">
-
-            <div
-                class="w-full group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center my-5">
-                <div class="w-full py-2">
-                    <img class="w-[90%] mx-auto  rounded"
-                        src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                        alt="">
-                </div>
-                <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                    <div class="">
-                        <p>Bộ sofa êm vcl</p>
-                    </div>
-                    <div class="rating rating-xs">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    </div>
-                    <div class="text-orange-300 font-semibold">
-                        <p>$120,000</p>
-                    </div>
-
-                    <div class="flex  duration-300   group-hover:duration-300">
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                    </div>
-                </div>
-            </div>
-            <div
-                class="w-full group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center my-5">
-                <div class="w-full py-2">
-                    <img class="w-[90%] mx-auto  rounded"
-                        src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                        alt="">
-                </div>
-                <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                    <div class="">
-                        <p>Bộ sofa êm vcl</p>
-                    </div>
-                    <div class="rating rating-xs">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    </div>
-                    <div class="text-orange-300 font-semibold">
-                        <p>$120,000</p>
-                    </div>
-
-                    <div class="flex  duration-300   group-hover:duration-300">
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                    </div>
-                </div>
-            </div>
-            <div
-                class="w-full group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex  my-5 flex-col items-center">
-                <div class="w-full py-2">
-                    <img class="w-[90%] mx-auto  rounded"
-                        src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                        alt="">
-                </div>
-                <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                    <div class="">
-                        <p>Bộ sofa êm vcl</p>
-                    </div>
-                    <div class="rating rating-xs">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    </div>
-                    <div class="text-orange-300 font-semibold">
-                        <p>$120,000</p>
-                    </div>
-
-                    <div class="flex  duration-300   group-hover:duration-300">
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                    </div>
-                </div>
-            </div>
-            <div
-                class="w-full my-5 group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center">
-                <div class="w-full py-2">
-                    <img class="w-[90%] mx-auto  rounded"
-                        src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                        alt="">
-                </div>
-                <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                    <div class="">
-                        <p>Bộ sofa êm vcl</p>
-                    </div>
-                    <div class="rating rating-xs">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    </div>
-                    <div class="text-orange-300 font-semibold">
-                        <p>$120,000</p>
-                    </div>
-
-                    <div class="flex  duration-300   group-hover:duration-300">
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                    </div>
-                </div>
-            </div>
-            <div
-                class="w-full my-5 group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center">
-                <div class="w-full py-2">
-                    <img class="w-[90%] mx-auto  rounded"
-                        src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                        alt="">
-                </div>
-                <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                    <div class="">
-                        <p>Bộ sofa êm vcl</p>
-                    </div>
-                    <div class="rating rating-xs">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    </div>
-                    <div class="text-orange-300 font-semibold">
-                        <p>$120,000</p>
-                    </div>
-
-                    <div class="flex  duration-300   group-hover:duration-300">
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                    </div>
-                </div>
-            </div>
-            <div
-                class="w-full my-5 group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center">
-                <div class="w-full py-2">
-                    <img class="w-[90%] mx-auto  rounded"
-                        src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                        alt="">
-                </div>
-                <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                    <div class="">
-                        <p>Bộ sofa êm vcl</p>
-                    </div>
-                    <div class="rating rating-xs">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    </div>
-                    <div class="text-orange-300 font-semibold">
-                        <p>$120,000</p>
-                    </div>
-
-                    <div class="flex  duration-300   group-hover:duration-300">
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                    </div>
-                </div>
-            </div>
-            <div
-                class="w-full my-5 group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center">
-                <div class="w-full py-2">
-                    <img class="w-[90%] mx-auto  rounded"
-                        src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                        alt="">
-                </div>
-                <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                    <div class="">
-                        <p>Bộ sofa êm vcl</p>
-                    </div>
-                    <div class="rating rating-xs">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    </div>
-                    <div class="text-orange-300 font-semibold">
-                        <p>$120,000</p>
-                    </div>
-
-                    <div class="flex  duration-300   group-hover:duration-300">
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                    </div>
-                </div>
-            </div>
-            <div
-                class="w-full my-5 group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center">
-                <div class="w-full py-2">
-                    <img class="w-[90%] mx-auto  rounded"
-                        src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                        alt="">
-                </div>
-                <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                    <div class="">
-                        <p>Bộ sofa êm vcl</p>
-                    </div>
-                    <div class="rating rating-xs">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    </div>
-                    <div class="text-orange-300 font-semibold">
-                        <p>$120,000</p>
-                    </div>
-
-                    <div class="flex  duration-300   group-hover:duration-300">
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                        <a href="/"
-                            class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                                name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-    <section class="w-[80%]  pt-8  mx-auto px-4">
-        <div class="hero min-h-screen"
+    <section class="w-[80%]  my-10  mx-auto">
+        <div class="hero  w-full "
             style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
-            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-overlay bg-opacity-60 py-72"></div>
             <div class="hero-content text-center text-neutral-content">
                 <div class="max-w-md">
                     <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
                     <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
                         exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-                    <button class="btn btn-outline">Watch video <ion-icon name="arrow-forward-outline" role="img"
+                    <button class="px-5 py-2 border border-orange-300  hover:text-white duration-300 rounded-lg rounded-orange-300 hover:bg-orange-300 hover:duration-300">Watch video <ion-icon name="arrow-forward-outline" role="img"
                             class="md hydrated"></ion-icon></button>
                 </div>
             </div>
