--- a/DATN/src/main/resources/templates/components/_header.html
+++ b/DATN/src/main/resources/templates/components/_header.html
@@ -33,7 +33,7 @@
               class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2">Contact</a>
           </div>
         </div>
-        <div class="flex gap-x-5 mt-1 text-orange-300 text-2xl lg:text-xl">
+        <div class="flex gap-x-5 mt-1 text-orange-300 text-lg lg:text-xl">
           <a href=""
             class=" text-center items-center duration-300 hover:border hover:pt-1 hover:px-2 hover:border-orange-300 rounded hover:duration-300"><ion-icon
               name="search-outline"></ion-icon></a>
