--- a/DATN/src/main/resources/templates/app/layout/blogs.html
+++ b/DATN/src/main/resources/templates/app/layout/blogs.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="bg-white min-h-screen">
     <section class="px-5 py-10 text-gray-800">
         <div class="container grid grid-cols-12 mx-auto gap-y-6 md:gap-10">
             <div class="flex flex-col justify-between col-span-12 py-2 space-y-8 md:space-y-16 md:col-span-3">
