--- a/DATN/src/main/resources/templates/app/layout/contact.html
+++ b/DATN/src/main/resources/templates/app/layout/contact.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="bg-white min-h-screen">
     <!-- start -->
     <section class=" text-gray-800">
         <div class="container max-w-xl p-6 py-12 mx-auto space-y-24 lg:px-8 lg:max-w-7xl">
