--- a/DATN/src/main/resources/templates/components/_footer.html
+++ b/DATN/src/main/resources/templates/components/_footer.html
@@ -1,6 +1,6 @@
 <footer class="bg-white w-full bg-black mt-10" th:fragment="footer">
   <div class="w-full bg-black">
-    <section class="flex flex-col w-[90%] justify-between md:w-[80%] mx-auto p-10 bg-black text-white">
+    <section class="flex flex-col lg:flex-row w-[90%] justify-between md:w-[80%] mx-auto p-10 bg-black text-white">
       <aside>
         <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
           clip-rule="evenodd" class="fill-current">
@@ -42,23 +42,14 @@
 
   <!--  -->
 </footer>
-
-<script>
-  window.fbAsyncInit = function() {
-      FB.init({
-          appId : "282791425847994",
-          xfbml : true,
-          version : "v2.6"
-      });
-  };
-  (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) {
-          return;
-      }
-      js = d.createElement(s);
-      js.id = id;
-      js.src = "//connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js";
-      fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-</script>
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/655da8c9d600b968d315cd68/1hfqtmliv';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
