--- a/DATN/src/main/resources/templates/components/custom/_card.html
+++ b/DATN/src/main/resources/templates/components/custom/_card.html
@@ -1,4 +1,4 @@
-<section class="w-full shadow group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center">
+<section class="w-full group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center">
     <div class="w-full py-2">
         <img class="w-[90%] mx-auto  rounded" src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg" alt="">
     </div>
