--- a/DATN/src/main/resources/templates/app/layout/about.html
+++ b/DATN/src/main/resources/templates/app/layout/about.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="bg-white min-h-screen">
     <section class="  text-gray-800 shadow">
         <div class="container max-w-6xl p-6 mx-auto space-y-6 sm:space-y-12">
             <a rel="noopener noreferrer" href="#"
