--- a/DATN/src/main/resources/templates/components/_ourProduct.html
+++ b/DATN/src/main/resources/templates/components/_ourProduct.html
@@ -16,262 +16,19 @@
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4  justify-items-center">
 
-        <div
-            class="w-full group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center my-5">
-            <div class="w-full py-2">
-                <img class="w-[90%] mx-auto  rounded"
-                    src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                    alt="">
-            </div>
-            <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                <div class="">
-                    <p>Bộ sofa êm vcl</p>
-                </div>
-                <div class="rating rating-xs">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                </div>
-                <div class="text-orange-300 font-semibold">
-                    <p>$120,000</p>
-                </div>
-
-                <div class="flex  duration-300   group-hover:duration-300">
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                </div>
-            </div>
-        </div>
-        <div
-            class="w-full group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center my-5">
-            <div class="w-full py-2">
-                <img class="w-[90%] mx-auto  rounded"
-                    src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                    alt="">
-            </div>
-            <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                <div class="">
-                    <p>Bộ sofa êm vcl</p>
-                </div>
-                <div class="rating rating-xs">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                </div>
-                <div class="text-orange-300 font-semibold">
-                    <p>$120,000</p>
-                </div>
-
-                <div class="flex  duration-300   group-hover:duration-300">
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                </div>
-            </div>
-        </div>
-        <div
-            class="w-full group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex  my-5 flex-col items-center">
-            <div class="w-full py-2">
-                <img class="w-[90%] mx-auto  rounded"
-                    src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                    alt="">
-            </div>
-            <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                <div class="">
-                    <p>Bộ sofa êm vcl</p>
-                </div>
-                <div class="rating rating-xs">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                </div>
-                <div class="text-orange-300 font-semibold">
-                    <p>$120,000</p>
-                </div>
-
-                <div class="flex  duration-300   group-hover:duration-300">
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                </div>
-            </div>
-        </div>
-        <div
-            class="w-full my-5 group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center">
-            <div class="w-full py-2">
-                <img class="w-[90%] mx-auto  rounded"
-                    src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                    alt="">
-            </div>
-            <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                <div class="">
-                    <p>Bộ sofa êm vcl</p>
-                </div>
-                <div class="rating rating-xs">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                </div>
-                <div class="text-orange-300 font-semibold">
-                    <p>$120,000</p>
-                </div>
-
-                <div class="flex  duration-300   group-hover:duration-300">
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                </div>
-            </div>
-        </div>
-        <div
-            class="w-full my-5 group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center">
-            <div class="w-full py-2">
-                <img class="w-[90%] mx-auto  rounded"
-                    src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                    alt="">
-            </div>
-            <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                <div class="">
-                    <p>Bộ sofa êm vcl</p>
-                </div>
-                <div class="rating rating-xs">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                </div>
-                <div class="text-orange-300 font-semibold">
-                    <p>$120,000</p>
-                </div>
-
-                <div class="flex  duration-300   group-hover:duration-300">
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                </div>
-            </div>
-        </div>
-        <div
-            class="w-full my-5 group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center">
-            <div class="w-full py-2">
-                <img class="w-[90%] mx-auto  rounded"
-                    src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                    alt="">
-            </div>
-            <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                <div class="">
-                    <p>Bộ sofa êm vcl</p>
-                </div>
-                <div class="rating rating-xs">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                </div>
-                <div class="text-orange-300 font-semibold">
-                    <p>$120,000</p>
-                </div>
-
-                <div class="flex  duration-300   group-hover:duration-300">
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                </div>
-            </div>
-        </div>
-        <div
-            class="w-full my-5 group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center">
-            <div class="w-full py-2">
-                <img class="w-[90%] mx-auto  rounded"
-                    src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                    alt="">
-            </div>
-            <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                <div class="">
-                    <p>Bộ sofa êm vcl</p>
-                </div>
-                <div class="rating rating-xs">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                </div>
-                <div class="text-orange-300 font-semibold">
-                    <p>$120,000</p>
-                </div>
-
-                <div class="flex  duration-300   group-hover:duration-300">
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                </div>
-            </div>
-        </div>
-        <div
-            class="w-full my-5 group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center">
-            <div class="w-full py-2">
-                <img class="w-[90%] mx-auto  rounded"
-                    src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                    alt="">
-            </div>
-            <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                <div class="">
-                    <p>Bộ sofa êm vcl</p>
-                </div>
-                <div class="rating rating-xs">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                </div>
-                <div class="text-orange-300 font-semibold">
-                    <p>$120,000</p>
-                </div>
-
-                <div class="flex  duration-300   group-hover:duration-300">
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            class="text-sm md hydrated" name="cart-outline" role="img"></ion-icon></a>
-                    <a href="/"
-                        class="border py-1 px-3 bg-orange-300 rounded invisible duration-300 group-hover:visible group-hover:duration-300"><ion-icon
-                            name="wallet-outline" role="img" class="md hydrated"></ion-icon></a>
-                </div>
-            </div>
-        </div>
+        <div class="" th:replace="./components/custom/_card.html"></div>
+        <div class="" th:replace="./components/custom/_card.html"></div>
+        <div class="" th:replace="./components/custom/_card.html"></div>
+        <div class="" th:replace="./components/custom/_card.html"></div>
+        <div class="" th:replace="./components/custom/_card.html"></div>
+        <div class="" th:replace="./components/custom/_card.html"></div>
+        <div class="" th:replace="./components/custom/_card.html"></div>
+        <div class="" th:replace="./components/custom/_card.html"></div>
+        
+       
+        
+        
+        
 
     </div>
 </section>
