--- a/DATN/src/main/resources/templates/components/index.html
+++ b/DATN/src/main/resources/templates/components/index.html
@@ -70,107 +70,13 @@
         <div class="text-5xl font-bold text-center">
             <p>Speial Products</p>
         </div>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
-            <div
-                class="w-full group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center my-5">
-                <div class="w-full py-2">
-                    <img class="w-[90%] mx-auto  rounded"
-                        src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                        alt="">
-                </div>
-                <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                    <div class="">
-                        <p>Bộ sofa êm vcl</p>
-                    </div>
-                    <div class="rating rating-xs">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    </div>
-                    <div class="text-orange-300 font-semibold">
-                        <p>$120,000</p>
-                    </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-y-5 gap-x-5 mt-10">
+            <div class="" th:replace="./components/custom/_card.html"></div>
+            <div class="" th:replace="./components/custom/_card.html"></div>
+            <div class="" th:replace="./components/custom/_card.html"></div>
+            <div class="" th:replace="./components/custom/_card.html"></div>
+            <div class="" th:replace="./components/custom/_card.html"></div>
 
-
-                </div>
-            </div>
-            <div
-                class="w-full group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center my-5">
-                <div class="w-full py-2">
-                    <img class="w-[90%] mx-auto  rounded"
-                        src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                        alt="">
-                </div>
-                <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                    <div class="">
-                        <p>Bộ sofa êm vcl</p>
-                    </div>
-                    <div class="rating rating-xs">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    </div>
-                    <div class="text-orange-300 font-semibold">
-                        <p>$120,000</p>
-                    </div>
-
-
-                </div>
-            </div>
-            <div
-                class="w-full group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center my-5">
-                <div class="w-full py-2">
-                    <img class="w-[90%] mx-auto  rounded"
-                        src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                        alt="">
-                </div>
-                <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                    <div class="">
-                        <p>Bộ sofa êm vcl</p>
-                    </div>
-                    <div class="rating rating-xs">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    </div>
-                    <div class="text-orange-300 font-semibold">
-                        <p>$120,000</p>
-                    </div>
-
-
-                </div>
-            </div>
-            <div
-                class="w-full group duration-300 hover:border hover:border-orange-300 hover:duration-300 rounded-lg flex   flex-col items-center my-5">
-                <div class="w-full py-2">
-                    <img class="w-[90%] mx-auto  rounded"
-                        src="https://noithatkdt.vn/wp-content/uploads/2023/11/Ghe-go-nho-gon-cho-phong-khach-S326-8-600x600.jpg"
-                        alt="">
-                </div>
-                <div class=" flex flex-col text-center items-center my-2 mx-2 text-black font-light gap-y-3">
-                    <div class="">
-                        <p>Bộ sofa êm vcl</p>
-                    </div>
-                    <div class="rating rating-xs">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400">
-                    </div>
-                    <div class="text-orange-300 font-semibold">
-                        <p>$120,000</p>
-                    </div>
-
-
-                </div>
-            </div>
         </div>
     </section>
     <section class="w-[80%]  pt-8  mx-auto px-4">
